fixes overflow on songs#learn cards

--- a/app/assets/stylesheets/components/_search_form.scss
+++ b/app/assets/stylesheets/components/_search_form.scss
@@ -50,6 +50,7 @@
   box-shadow: 0px 0px 9px rgba(20, 20, 20, 0.25);
   align-items: center;
   position: relative;
+  margin: 0;
 
   .song-item-info {
     width: 100%;
@@ -61,6 +62,9 @@
     color: #6D6D6D;
     text-align: left;
     flex-grow: 1;
+    margin: 0;
+    height: 100%;
+    padding: 15px 22px;
   }
 
   img {
@@ -72,6 +76,9 @@
 
   h2 {
     font-size: $header-font-size-2;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   }
 }
 
